--- a/home1/build.gradle
+++ b/home1/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'ru.otus'
@@ -11,6 +12,10 @@ repositories {
     mavenCentral()
 }
 
+application {
+    mainClassName = 'ru.otus.home1.Main'
+}
+
 dependencies {
     implementation group: "org.springframework", name: "spring-context", version: "5.2.3.RELEASE"
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
@@ -19,4 +24,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.15.0'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.3.0'
+
+
 }
