--- a/home1/build.gradle
+++ b/home1/build.gradle
@@ -16,6 +16,10 @@ application {
     mainClassName = 'ru.otus.home1.Main'
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     implementation group: "org.springframework", name: "spring-context", version: "5.2.3.RELEASE"
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
@@ -23,7 +27,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.15.0'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '3.3.0'
 
