--- a/home1/build.gradle
+++ b/home1/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'org.springframework.boot' version '2.2.5.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
     id 'application'
 }
@@ -21,16 +23,12 @@ test {
 }
 
 dependencies {
-    implementation group: "org.springframework", name: "spring-context", version: "5.2.3.RELEASE"
+    implementation 'org.springframework.boot:spring-boot-starter'
+
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
 
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.15.0'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.3.0'
-
-
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
