ДЗ-9: Добавлены комментарии, Id сделаны автогенерированными, доработаны тесты

--- a/home7/src/main/resources/application.yml
+++ b/home7/src/main/resources/application.yml
@@ -10,10 +10,9 @@ spring:
 
     show-sql: true
 
-
-liquibase:
-  change-log: classpath:db/changelog.xml
+  liquibase:
+    change-log: classpath:db/changelog.xml
 
 logging:
   level:
-    ROOT: DEBUG
+    ROOT: ERROR
