Начало работы над ДЗ-16

--- a/home7/build.gradle
+++ b/home7/build.gradle
@@ -21,6 +21,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.shell:spring-shell-starter:2.0.1.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
     implementation 'org.liquibase:liquibase-core:3.8.9'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
