--- a/home7/build.gradle
+++ b/home7/build.gradle
@@ -23,6 +23,10 @@ dependencies {
     implementation 'org.springframework.shell:spring-shell-starter:2.0.1.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation project(':home16-dto')
+
+    implementation 'io.springfox:springfox-swagger2:2.9.2'
+    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 
     implementation 'org.liquibase:liquibase-core:3.8.9'
     compileOnly 'org.projectlombok:lombok'
