--- a/home7/src/main/resources/application.yml
+++ b/home7/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
   liquibase:
     change-log: classpath:db/changelog.xml
 
+  shell:
+    interactive:
+      enabled: false
+
 logging:
   level:
     ROOT: DEBUG
