--- a/home16-android/src/main/AndroidManifest.xml
+++ b/home16-android/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:usesCleartextTraffic="true">
         <activity
                 android:name="ru.otus.bookApp.ui.AuthorListActivity"
-                android:label="@string/app_name"
+                android:label="@string/authors"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -23,13 +23,10 @@
             </intent-filter>
         </activity>
         <activity
-                android:name="ru.otus.bookApp.ItemDetailActivity"
-                android:label="@string/title_item_detail"
-                android:parentActivityName="ru.otus.bookApp.ItemListActivity"
-                android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                    android:name="android.support.PARENT_ACTIVITY"
-                    android:value="ru.otus.bookApp.ItemListActivity"/>
+                android:name="ru.otus.bookApp.ui.AuthorActivity"
+                android:label="@string/author"
+                android:theme="@style/AppTheme.NoActionBar"
+                android:excludeFromRecents="true">
         </activity>
     </application>
 
