--- a/home16-android/build.gradle
+++ b/home16-android/build.gradle
@@ -43,6 +43,8 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "2.2.0"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':home16-dto')
 
@@ -51,6 +53,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta6'
     implementation 'com.google.android.material:material:1.0.0'
+
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
 
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
