--- a/home16-android/src/main/AndroidManifest.xml
+++ b/home16-android/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+            android:name=".Main"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -12,21 +13,29 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
-        <activity
-                android:name="ru.otus.bookApp.ui.AuthorListActivity"
-                android:label="@string/authors"
-                android:theme="@style/AppTheme.NoActionBar">
+        <!--        <activity-->
+        <!--                android:name="ru.otus.bookApp.ui.AuthorListFragment"-->
+        <!--                android:label="@string/authors"-->
+        <!--                android:theme="@style/AppTheme.NoActionBar">-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="android.intent.action.MAIN"/>-->
+
+        <!--                <category android:name="android.intent.category.LAUNCHER"/>-->
+        <!--            </intent-filter>-->
+        <!--        </activity>-->
+        <!--        <activity-->
+        <!--                android:name="ru.otus.bookApp.ui.AuthorActivity"-->
+        <!--                android:label="@string/author"-->
+        <!--                android:theme="@style/AppTheme.NoActionBar"-->
+        <!--                android:excludeFromRecents="true">-->
+        <!--        </activity>-->
+        <activity android:name=".ui.MainActivity"
+        >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <activity
-                android:name="ru.otus.bookApp.ui.AuthorActivity"
-                android:label="@string/author"
-                android:theme="@style/AppTheme.NoActionBar"
-                android:excludeFromRecents="true">
         </activity>
     </application>
 
